Introduce `documentation-generator` module