@@ -39,6 +39,7 @@
     </developers>
 
     <modules>
+        <module>documentation-generator</module>
         <module>error-prone-contrib</module>
         <module>refaster-compiler</module>
         <module>refaster-runner</module>
@@ -856,6 +857,7 @@
                         </annotationProcessorPaths>
                         <compilerArgs>
                             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
@@ -1347,6 +1349,37 @@
     </build>
 
     <profiles>
+        <profile>
+            <!-- Adds the `documentation-generation` module as an annotation
+            processor to scan the classpath and extract bug pattern data used
+            in documentation generation. Assumes that a prior build has already
+            installed the project in the local Maven repository. -->
+            <!-- XXX: Maybe rename to `generate-docs`? -->
+            <id>documentation-generation</id>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <configuration>
+                                <annotationProcessorPaths combine.children="append">
+                                    <path>
+                                        <groupId>${project.groupId}</groupId>
+                                        <artifactId>documentation-generator</artifactId>
+                                        <version>${project.version}</version>
+                                    </path>
+                                </annotationProcessorPaths>
+                                <compilerArgs combine.children="append">
+                                    <arg>-Xplugin:DocumentationGenerator
+                                        -XdocsOutputDirectory=${project.build.directory}</arg>
+                                </compilerArgs>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
         <profile>
             <id>error-prone-fork</id>
             <properties>
